--- a/res/values/custom_dimens.xml
+++ b/res/values/custom_dimens.xml
@@ -16,6 +16,12 @@
  -->
 
 <resources>
+    <!-- Notification light -->
+    <dimen name="oval_notification_size">26dp</dimen>
+
+    <dimen name="design_bottom_navigation_text_size">10dp</dimen>
+    <dimen name="design_bottom_navigation_active_text_size">11dp</dimen>
+
     <dimen name="alert_dialog_padding_material">20dp</dimen>
     <dimen name="color_preference_width">18dip</dimen>
     <dimen name="color_preference_height">18dip</dimen>
