--- a/res/xml/bars_settings.xml
+++ b/res/xml/bars_settings.xml
@@ -83,6 +83,12 @@
 
         </PreferenceCategory>
 
+	<PreferenceScreen
+		android:key="pulse_settings"
+		android:title="@string/pulse_settings"
+		android:summary="@string/pulse_settings_summary"
+		android:fragment="com.dirtyunicorns.tweaks.fragments.PulseSettings" />
+
         <PreferenceCategory
             android:key="aspect_ratio_category"
             android:title="@string/aspect_ratio_category_title">
