--- a/res/xml/pulse_settings.xml
+++ b/res/xml/pulse_settings.xml
@@ -34,7 +34,7 @@
         android:summary="@string/pulse_auto_color_summary"
         android:dependency="eos_fling_show_pulse" />
 
-    <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="eos_fling_pulse_color"
         android:title="@string/fling_pulse_color"
         android:summary="@string/fling_pulse_color_summary"
@@ -47,7 +47,7 @@
         android:summary="@string/eos_fling_lavalamp_summary"
         android:dependency="eos_fling_show_pulse" />
 
-    <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+    <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
         android:key="pulse_custom_buttons_opacity"
         android:title="@string/pulse_custom_buttons_opacity_title"
         android:max="255"
@@ -58,7 +58,7 @@
         android:key="pulse_fading_bars_category"
         android:title="@string/pulse_legacy_mode_advanced_category">
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_custom_dimen"
             android:title="@string/pulse_custom_dimen"
             android:max="30"
@@ -66,7 +66,7 @@
             settings:units="dp"
             android:dependency="pulse_fading_bars_category"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_custom_div"
             android:title="@string/pulse_custom_div"
             android:max="44"
@@ -75,7 +75,7 @@
             settings:units="dp"
             android:dependency="pulse_fading_bars_category"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_filled_block_size"
             android:title="@string/pulse_filled_block_size"
             android:max="8"
@@ -83,7 +83,7 @@
             settings:units="dp"
             android:dependency="pulse_fading_bars_category"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_empty_block_size"
             android:title="@string/pulse_empty_block_size"
             android:max="4"
@@ -91,14 +91,14 @@
             settings:units="dp"
             android:dependency="pulse_fading_bars_category"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_custom_fudge_factor"
             android:title="@string/pulse_custom_fudge_factor"
             android:max="6"
             settings:min="2"
             android:dependency="pulse_fading_bars_category"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="fling_pulse_lavalamp_speed"
             android:title="@string/lavamp_solid_speed_title"
             android:max="30000"
@@ -112,14 +112,14 @@
         android:key="pulse_2"
         android:title="@string/pulse_solid_dimen_category" >
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_solid_units_opacity"
             android:title="@string/pulse_solid_units_opacity"
             android:max="255"
             settings:min="0"
             android:dependency="pulse_2"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_solid_units_count"
             android:title="@string/pulse_solid_units_count"
             android:max="128"
@@ -127,14 +127,14 @@
             settings:min="32"
             android:dependency="pulse_2"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="pulse_solid_fudge_factor"
             android:title="@string/pulse_custom_fudge_factor"
             android:max="7"
             settings:min="2"
             android:dependency="pulse_2"/>
 
-        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+        <com.dirtyunicorns.tweaks.preferences.CustomSeekBarPreference
             android:key="lavamp_solid_speed"
             android:title="@string/lavamp_solid_speed_title"
             android:max="30000"
